# HybridLearner

./: .gitignore  .gitmodules  CMakeLists.txt  Pipfile  README_new.md  config  makefile.init
examples/: computeDTW_dist_main.py  run_main.m
examples/ball/AfterAnnotation/: call_run_ball.m  compute_cost.py
examples/ball/BeforeAnnotation/: call_run_ball.m  compute_cost.py
examples/oscillator/AfterAnnotation/: compute_cost.py
examples/oscillator/BeforeAnnotation/: compute_cost.py
examples/twoTanks/AfterAnnotation/: compute_cost.py
src/application/: HybridLearner.cpp  engineSelector.cpp  engineSelector.h
src/commandLineParser/: commandLineParser.cpp  commandLineParser.h  parameters.cpp  parameters.h  user_inputs.cpp  user_inputs.h  user_inputs_helper.cpp  user_inputs_helper.h
src/dReachModelling/: modelConstructor.cpp  modelConstructor.h
src/hybridautomata/: data_structure.h  hybridAutomata.cpp  hybridAutomata.h  location.h  variable_to_index_mapping.cpp  variable_to_index_mapping.h
src/io_functions/: data_structs.h  plotter.cpp  plotter.h  summary.cpp  summary.h
src/learningHA/: learnHA_caller.cpp  learnHA_caller.h
src/modelParser/: modelParser.cpp  modelParser.h
src/simulation/: simulation.cpp  simulation.h
src/simulinkModelling/: simulinkModelConstructor.cpp  simulinkModelConstructor.h
src/utilities/: filenames.h  filesystem.cpp  filesystem.h  intermediateResult.cpp  intermediateResult.h  linux_utilities.cpp  linux_utilities.h  matlab.h  misc.cpp  misc.h  string_operations.cpp  string_operations.h  system.cpp  system.h
(+37 files in other folders)
